#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-12
1015-2-5 David Schneider
- incorporate fastindex_02 tag from fastindex branch into trunk. 
- tracks JIRA PSAS-98 to get fast translation in live/online mode. fastindex is
  a temporary, less robust solution until small data PSAS-85 makes more progress.
  At that point we should remove fastindex.
	
Tag: V00-02-11
2015-2-4 David Schneider
- update psddlc wrapper, JIRA PSAS-103
	
Tag: V00-02-10
2015-2-3 David Schneider
- clean up issue with modifiying generated code to exclude small data.
  Wrote new ddl_Translator driver script that excludes it.
- support DEVEL as well. Track JIRA PSAS-103

Tag: V00-02-09
2015-2-2 David Schneider
- regenerate for new pdsdata 8.2.2 with EBeamV7 fix. Also OceanOptics DataV3 and 
  test bits on Quartz configV2 and smlData.
- track JIRA PSAS-103. Note issue with smlData. Some generated code was modified in this package.

Tag: V00-02-08
2014-11-25 David Schneider
- regenerate for new pdsdata 8.1.10/psddldata V01-00-22 with TimeTool::ConfigV2, 
  TimeTool::DataV2, Quartz::ConfigV2
- Track JIRA issue PSAS-72

Tag: V00-02-07
2014-10-23 David Schneider
- regenerate for new pdsdata 8.1.8/psddldata V01-00-19 with Epix::Config100aV1 and Epix::ElementV2
  Track JIRA issue PSAS-56

Tag: V00-02-06
2014-10-15 David Schneider
- regenerate for new pdsdata 8.1.7/psddldata V01-00-18 with Bld::BldDataSpectrometerV1
  Track JIRA issue PSAS-50

Tag: V00-02-05
2014-10-03 David Schneider
	- regenerate for new pdsdata 8.1.4/psddldata with:
	Evr::IOConfigV2. Track JIRA issue PSAS-41

Tag: V00-02-04
2014-09-29 David Schneider
- minor adjustment to default.cfg
	
Tag: V00-02-03